--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -1,10 +1,10 @@
 @font-face
   font-family: 'sell-icon'
-  src:  url('fonts/sell-icon.eot?pp6f87')
-  src:  url('fonts/sell-icon.eot?pp6f87#iefix') format('embedded-opentype'),
-    url('fonts/sell-icon.ttf?pp6f87') format('truetype'),
-    url('fonts/sell-icon.woff?pp6f87') format('woff'),
-    url('fonts/sell-icon.svg?pp6f87#sell-icon') format('svg')
+  src:  url('../fonts/sell-icon.eot?pp6f87')
+  src:  url('../fonts/sell-icon.eot?pp6f87#iefix') format('embedded-opentype'),
+    url('../fonts/sell-icon.ttf?pp6f87') format('truetype'),
+    url('../fonts/sell-icon.woff?pp6f87') format('woff'),
+    url('../fonts/sell-icon.svg?pp6f87#sell-icon') format('svg')
   font-weight: normal
   font-style: normal
 
