--- a/src/common/stylus/mixin.styl
+++ b/src/common/stylus/mixin.styl
@@ -9,7 +9,7 @@ border-1px($color)
         border-top: 1px solid $color
         content: ' '
 
-bd-image($url)
+bg-image($url)
     background-image: url($url + "@2x.png")
     @media (-webkit-min-device-pixel-ratio: 3),(min-device-pixel-ratio: 3)
         background-image: url($url + "@3x.png")
